Updated weather app to be a configurable plugin

--- a/vanillaJS-academy/08_weatherApp/style.css
+++ b/vanillaJS-academy/08_weatherApp/style.css
@@ -30,9 +30,11 @@ img {
 
 #additionalInfo {
   margin: 2em auto 2em auto;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 16px;
+  display: flex;
+}
+
+#additionalInfo div {
+  width: 100%;
 }
 
 #additionalInfo img {
