--- a/vanillaJS-academy/20_toDoApp/style.css
+++ b/vanillaJS-academy/20_toDoApp/style.css
@@ -1,9 +1,10 @@
 body {
-  /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
-    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; */
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   margin: 1em auto;
   max-width: 40em;
   width: 88%;
+  font-size: 16px;
 }
 form {
   margin-bottom: 2em;
@@ -11,6 +12,12 @@ form {
 label {
   display: block;
   width: 100%;
+  display: flex;
+  align-items: center;
+}
+
+input {
+  font-size: 1em;
 }
 [type="checkbox"] {
   margin-right: 0.5em;
@@ -19,14 +26,16 @@ label {
 }
 
 ul.todos li {
-  padding-top: 12px;
-  padding-bottom: 12px;
+  padding-top: 8px;
+  padding-bottom: 8px;
   border-bottom: 1px solid lightgray;
   display: flex;
 }
 
 ul.todos li div {
+  display: flex;
   flex-shrink: 0;
+  align-items: center;
 }
 
 ul.todos .todo-done label {
@@ -45,6 +54,8 @@ button {
   padding: 4px 8px 4px 8px;
   border: 1px solid darkgray;
   border-radius: 4px;
+  font-size: 1em;
+  font-weight: 500;
 }
 
 .destructive {
