--- a/wuTang/pairDetails/css/style.css
+++ b/wuTang/pairDetails/css/style.css
@@ -5,6 +5,7 @@
  * 1. Correct the line height in all browsers.
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800&display=swap");
 html {
   line-height: 1.15;
   /* 1 */
@@ -307,7 +308,7 @@ template {
   box-sizing: border-box; }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: "Open Sans", sans-serif;
   font-size: 16px;
   background-color: lightgray; }
 
@@ -419,3 +420,23 @@ nav {
 .positive {
   color: green !important;
   font-weight: bold; }
+
+.compareStats {
+  display: flex;
+  justify-content: space-between;
+  padding: 16px 16px;
+  margin: 16px auto;
+  font-size: 15px;
+  max-width: 400px;
+  border: 1px rgba(255, 255, 255, 0.5) solid;
+  border-radius: 4px; }
+  .compareStats div {
+    display: flex; }
+    .compareStats div label {
+      display: inline;
+      color: rgba(255, 255, 255, 0.5);
+      margin-right: 4px;
+      font-weight: 600; }
+    .compareStats div p {
+      margin: 0;
+      font-weight: bold; }
